# C-Technical-Test

./: .gitignore  CMakeLists.txt  README.md  values.csv
src/: csv_file_value.hpp  main.cpp  wordListor.cpp  wordListor.hpp
tests/: test.cpp
texts/: texte.count.txt  texte.txt
